--- a/deploy-website.yml
+++ b/deploy-website.yml
@@ -12,7 +12,7 @@
         state: latest
         update_cache: yes 
 
-    - name: install apache unzip
+    - name: install unzip
       yum:
         name: unzip
         state: latest
