--- a/deploy-website.yml
+++ b/deploy-website.yml
@@ -27,7 +27,7 @@
 
     - name: download web files from github
       get_url:
-        url: https://github.com/ojotosin/ansible-playbooks/find/main
+        url: https://github.com/ojotosin/ansible-playbooks/find/main.zip
         dest: /var/www/html/
 
     - name: unzip the zip folder
